# multiagent-orogen-fipa_services

./: CMakeLists.txt  PortStatsTypes.hpp  fipa_services.orogen  manifest.xml  mts.orogen  root-module.orogen  root.orogen  root_module_data.h
configuration/: module.xml
scripts/: start.rb  test_service_directory.rb  typelib.rb
scripts/benchmarking/: analyse.rb  fipa_benchmark.rb  prepare_ntp.sh  start_echo_server.rb  start_talking_peer.rb
scripts/test/: p2p_test.rb  start_talking_peer.rb  test_broadcasting.rb  test_mts_failure.rb  test_multicast.rb  test_receiver.rb  test_red_blue.rb  test_sender.rb
scripts/test/static_setup/: receiver.yml  sender.yml  test_receiver.rb  test_sender.rb
tasks/: CMakeLists.txt  EchoTask.cpp  EchoTask.hpp  MessageTransportTask.cpp  MessageTransportTask.hpp  Module.cpp  Module.hpp  ModuleID.cpp  ModuleID.hpp  RemoteConnection.cpp  RemoteConnection.hpp  RootModule.cpp  RootModule.hpp  Task.cpp  Task.hpp  fipa_msg_object.h  module_id.cpp  module_id.h
tasks/connection/: connection_interface.h  corba_connection.h  socket_connection.h
tasks/connections/: CMakeLists.txt  client_socket_connection.cpp  client_socket_connection.h  connection_interface.h  corba_connection.cpp  corba_connection.h  fipa_msg_object.h  socket_connection.h
tasks/connections/cmake/: FindOrocosRTT.cmake
tasks/messages/: CMakeLists.txt  fipa_message.cpp  fipa_message.h  message_interface.cpp  message_interface.h  test.cpp
