include(modulesTaskLib)

add_subdirectory(messages)

set(SOURCES module_id.cpp) 
set(MODULES_TASKLIB_SOURCES ${MODULES_TASKLIB_SOURCES} ${SOURCES})

ADD_LIBRARY(${MODULES_TASKLIB_NAME} SHARED ${MODULES_TASKLIB_SOURCES})

add_dependencies(${MODULES_TASKLIB_NAME} regen-toolkit)

TARGET_LINK_LIBRARIES(
    ${MODULES_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${MODULES_TASKLIB_DEPENDENT_LIBRARIES}
    ${MESSAGE_PARSER_LIBRARIES}
    ${SERVICE_DISCOVERY_LIBRARIES}
    ${SIGC++_LIBRARY}
)

SET_TARGET_PROPERTIES(${MODULES_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${MODULES_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${MODULES_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${MODULES_TASKLIB_HEADERS}
    DESTINATION include/orocos/modules)

set(HEADERS module_ip.h)
INSTALL(FILES ${HEADERS}
    DESTINATION include/orocos/modules/tasks)

