set(TASKLIB_PKG_INCLUDE_DIRS -I${CMAKE_INSTALL_PREFIX}/include/orocos/mts)
include(mtsTaskLib)

SET(CON_HEADERS
    connections/connection_interface.h
    connections/corba_connection.h
)

SET(SOURCES 
    connections/corba_connection.cpp
)

SET(MTS_TASKLIB_HEADERS ${MTS_TASKLIB_HEADERS})
SET(MTS_TASKLIB_SOURCES ${MTS_TASKLIB_SOURCES} ${SOURCES})

FIND_PACKAGE(Boost COMPONENTS regex thread REQUIRED) 


ADD_LIBRARY(${MTS_TASKLIB_NAME} SHARED 
    ${MTS_TASKLIB_SOURCES})

ADD_DEPENDENCIES(${MTS_TASKLIB_NAME}
    regen-typekit)


TARGET_LINK_LIBRARIES(${MTS_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${OrocosCORBA_LIBRARIES}
    ${MTS_TASKLIB_DEPENDENT_LIBRARIES}
    ${Boost_THREAD_LIBRARY}
    ${Boost_REGEX_LIBRARY}
)
message("THREAD: ${BOOST_LIBRARY_THREADS}")

SET_TARGET_PROPERTIES(${MTS_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${MTS_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${MTS_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)
message (MTS_TASKLIB_HEADERS ${MTS_TASKLIB_HEADERS})

INSTALL(FILES ${MTS_TASKLIB_HEADERS}
    DESTINATION include/orocos/mts)
INSTALL(FILES ${CON_HEADERS}
    DESTINATION include/orocos/mts/connections)


